--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bower": "^1.8.0",
     "body-parser": "^1.15.1",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
+    "http-server": "^0.9.0",
     "jsonwebtoken": "^7.4.3",
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
