changes made to package.json file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "./node_modules/.bin/http-server",
+    "prestart": "npm install",
+    "postinstall": "bower install"
   },
   "author": "Aaron Ofengender",
   "license": "ISC",
