--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "workoutlogserver",
   "version": "1.0.0",
   "description": "server for workout log app",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/http-server",
-    "prestart": "npm install",
-    "postinstall": "bower install"
+    "start": "node app.js"
   },
   "author": "Aaron Ofengender",
   "license": "ISC",
