--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3"
+  },
+  "devDependencies": {
+    "sequelize": "^3.30.4"
   }
 }
